test/link/patch-overflow.out
error: patch-overflow.asm(3): Value 81920 is not 16-bit
error: patch-overflow.asm(2): Value 16384 is not 8-bit
Linking failed with 2 errors
