test/link/patch-overflow.asm
section "test", romx
db startof("test")
dw startof("test") * 5
